48
================

23/08/23 <<AgeYM>> token to show age with years and months
23/08/23 Allow sorting by unit on animal observations #1321
23/08/23 type hints db, dbfs #1320
23/08/23 type hints up to "c" modules #1320
22/08/23 Fix for NPE in DISPLAYLOCATION when using mobile_photo_upload
22/08/23 Additional wordkeys for CurrentVet 
22/08/23 Abstracted Python3 type hint framework, added to "a" modules #1320
21/08/23 Make new mobile UI the default #1096
21/08/23 Fix bug in new mobile UI with recording test results #1096
21/08/23 Reload base record when viewing people/animals/incidents #1096
18/08/23 Show timeline on mobile UI home screen #1096

47
================

17/08/23 Handle nulls in name fields when constructing OwnerName
16/08/23 Smartphone UI tweaks #1096
16/08/23 Use 2FA buttons and validate user has set up TOTP before enabling #1318
16/08/23 Do not send password reset emails for disabled user accounts
16/08/23 Fix report param extraction so it doesn't fail with incomplete tokens
16/08/23 Fix Mailmerge->Send Email to respond to email tokens #1088
15/08/23 Fix move_adopt so animal or person can be chosen in any order
14/08/23 Stock take ported to new smartphone UI #1096
14/08/23 Additional fields: Merge separate columns into a single options column
14/08/23 Perform homecheck in new smartphone UI #1096
14/08/23 Check license and complete diary support for new smartphone UI #1096
13/08/23 Fix bug with extract_email_tokens being fed bytes
12/08/23 move_adopt: validate checkout/paperwork values at server side
11/08/23 Add log support to people in new mobile interface #950
11/08/23 Use same scheme with 2m cache for splash/logo.jpg
11/08/23 Fix bug where saving an appointment reset the amount to $0
10/08/23 Do not show checkout under Move->Adopt for animals with no fee
10/08/23 Allow RescueGroups to be published to more frequently than 24 hours
09/08/23 Add {{CC}} and {{BCC}} email tokens #1088