@@ -34,6 +34,8 @@ List = typing.List
 Dict = typing.Dict
 Tuple = typing.Tuple
 
+datetime = "datetime.datetime" # this can be used if the only reason you're pulling datetime in is for type checking
+
 Database = "asm3.dbms.base.Database"
 ResultRow = "asm3.dbms.base.ResultRow"
 Results = "List[asm3.dbms.base.ResultRow]"
