@@ -1,6 +1,7 @@
 48
 ================
 
+23/08/23 type hints clinic, diary, event #1320
 23/08/23 <<AgeYM>> token to show age with years and months
 23/08/23 Allow sorting by unit on animal observations #1321
 23/08/23 type hints db, dbfs #1320
